--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
+    "highlight.js": "9.12.0",
     "node-sass": "4.9.3",
     "sass-loader": "7.1.0",
+    "simplemde": "1.11.2",
+    "sweetalert2": "7.26.11",
     "vue": "2.5.17",
-    "vue-router": "3.0.1"
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
