--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.6.2",
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
     "highlight.js": "9.12.0",
