--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuejs-caff",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "qijun.zhou <qijun.zhou@changhong.com>",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
