--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "bootstrap-sass": "3.3.7",
     "font-awesome": "4.7.0",
     "highlight.js": "9.12.0",
+    "i": "^0.3.6",
     "moment": "2.22.2",
     "node-emoji": "1.8.1",
     "qrcode.vue": "1.6.0",
     "sass-loader": "7.1.0",
     "simplemde": "1.11.2",
     "sweetalert2": "7.26.11",
-    "vue": "2.5.17",
+    "vue": "^2.5.2",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
   "devDependencies": {
+    "@webpack-cli/serve": "^1.2.0",
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
     "babel-core": "^6.22.1",
@@ -41,9 +43,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -55,12 +58,13 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "1.1.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^14.2.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "3.1.14",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
