格式化代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "cSpell.words": [
+    "QWERTYUIOPLKJHGFDSAZXCVBNM",
     "cparagraph",
     "csentence",
     "ctitle",
+    "hcenter",
     "mockjs",
     "portfinder",
+    "swal",
     "uavatar",
     "uglifyjs",
     "unames",
